--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,26 +92,28 @@
         <EditText
             android:id="@+id/editTextNumber"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="numberSigned" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textViewKota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Asal Kota" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinnerKota"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textViewLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Level" />
 
         <RadioGroup
+            android:id="@+id/level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
